--- a/code/data_preparation/00.10_getCornPrices.md
+++ b/code/data_preparation/00.10_getCornPrices.md
@@ -23,9 +23,8 @@ library(lubridate)
 
 library(Hmisc)
 
-# get filepath to R project on local system
-library(here)
-mainDir <- here()
+# filepath to repo on local system
+mainDir <- '/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1'
 
 sessionInfo()
 ```
@@ -46,10 +45,10 @@ sessionInfo()
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] here_0.1        Hmisc_4.1-1     Formula_1.2-3   survival_2.42-3
-##  [5] lattice_0.20-35 lubridate_1.7.4 forcats_0.3.0   stringr_1.3.1  
-##  [9] dplyr_0.7.6     purrr_0.2.5     readr_1.1.1     tidyr_0.8.1    
-## [13] tibble_1.4.2    ggplot2_3.1.0   tidyverse_1.2.1 knitr_1.20     
+##  [1] Hmisc_4.1-1     Formula_1.2-3   survival_2.42-3 lattice_0.20-35
+##  [5] lubridate_1.7.4 forcats_0.3.0   stringr_1.3.1   dplyr_0.7.6    
+##  [9] purrr_0.2.5     readr_1.1.1     tidyr_0.8.1     tibble_1.4.2   
+## [13] ggplot2_3.1.0   tidyverse_1.2.1 knitr_1.20     
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] Rcpp_0.12.19        assertthat_0.2.0    rprojroot_1.3-2    
@@ -133,7 +132,7 @@ ggplot(data = price, aes(x=Year, y = Value)) +
   ggtitle('Nominal (unadjusted) Corn Prices') 
 ```
 
-![](../figure/00.10_cornPrices/nassPrice_YearPeriod-1.png)<!-- -->
+![](../../figure/00.10_cornPrices/nassPrice_YearPeriod-1.png)<!-- -->
 
 ```r
 # plot it
@@ -143,7 +142,7 @@ ggplot(data = price, aes(x=Year, y = price_2017)) +
   ggtitle('Inflation-adjusted Corn Prices')
 ```
 
-![](../figure/00.10_cornPrices/nassPrice_YearPeriod-2.png)<!-- -->
+![](../../figure/00.10_cornPrices/nassPrice_YearPeriod-2.png)<!-- -->
 
 ```r
 # write out dataset
@@ -187,7 +186,7 @@ ggplot(data = price, aes(x=Year, y = Value)) +
   ggtitle('Nomial (unadjusted) Crop Prices') 
 ```
 
-![](../figure/00.10_cornPrices/nassPriceCorrelations-1.png)<!-- -->
+![](../../figure/00.10_cornPrices/nassPriceCorrelations-1.png)<!-- -->
 
 ```r
 # plot it
@@ -197,7 +196,7 @@ ggplot(data = price, aes(x=Year, y = price_2016)) +
   ggtitle('Inflation-adjusted Crop Prices')
 ```
 
-![](../figure/00.10_cornPrices/nassPriceCorrelations-2.png)<!-- -->
+![](../../figure/00.10_cornPrices/nassPriceCorrelations-2.png)<!-- -->
 
 ```r
 # run correlations ----------------------
