--- a/code/data_preparation/00.20_wells_wizardFormatting.md
+++ b/code/data_preparation/00.20_wells_wizardFormatting.md
@@ -25,9 +25,8 @@ library(tidyverse) # for ggplot2, tidyr, dplyr
 library(sf)
 library(lubridate)
 
-# get filepath to R project on local system
-library(here)
-mainDir <- here()
+# get filepath to repo on local system
+mainDir <- '/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1'
 
 sessionInfo()
 ```
@@ -48,9 +47,9 @@ sessionInfo()
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] here_0.1        lubridate_1.7.4 sf_0.6-3        forcats_0.3.0  
-##  [5] stringr_1.3.1   dplyr_0.7.6     purrr_0.2.5     readr_1.1.1    
-##  [9] tidyr_0.8.1     tibble_1.4.2    ggplot2_3.1.0   tidyverse_1.2.1
+##  [1] lubridate_1.7.4 sf_0.6-3        forcats_0.3.0   stringr_1.3.1  
+##  [5] dplyr_0.7.6     purrr_0.2.5     readr_1.1.1     tidyr_0.8.1    
+##  [9] tibble_1.4.2    ggplot2_3.1.0   tidyverse_1.2.1
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] tidyselect_0.2.4 haven_1.1.2      lattice_0.20-35  colorspace_1.3-2
@@ -147,7 +146,7 @@ buffHoles <- st_difference(buffHole, null9) %>% select('masterid')
 plot(buffHoles)
 ```
 
-![](../figure/00.20_wizardFormatting/loadPolys-1.png)<!-- -->
+![](../../figure/00.20_wizardFormatting/loadPolys-1.png)<!-- -->
 
 ```r
 # new buffered aoi polygons
@@ -156,7 +155,7 @@ aoi2 <- aoi %>%
 plot(aoi2)
 ```
 
-![](../figure/00.20_wizardFormatting/loadPolys-2.png)<!-- -->
+![](../../figure/00.20_wizardFormatting/loadPolys-2.png)<!-- -->
 
 ```r
 # # export for external data processing
@@ -375,7 +374,7 @@ ggplot(wellsWinterRecent, aes(DOY)) +
 ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 ```
 
-![](../figure/00.20_wizardFormatting/filterData-1.png)<!-- -->
+![](../../figure/00.20_wizardFormatting/filterData-1.png)<!-- -->
 
 ```r
 # compare against all wells
@@ -392,7 +391,7 @@ ggplot(wellsInData2 %>% filter(Date >= startDate), aes(DOY)) +
 ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 ```
 
-![](../figure/00.20_wizardFormatting/filterData-2.png)<!-- -->
+![](../../figure/00.20_wizardFormatting/filterData-2.png)<!-- -->
 
 ## check for bad data
 The Status and Accuracy code columns have some qa/qc materials
@@ -588,7 +587,7 @@ yearCounts <- wells4 %>%
 hist(yearCounts$n)
 ```
 
-![](../figure/00.20_wizardFormatting/dataStats-1.png)<!-- -->
+![](../../figure/00.20_wizardFormatting/dataStats-1.png)<!-- -->
 
 ```r
 # how many wells each year?
