--- a/code/data_preparation/00.25_wells_wizard_actualKRIGING.md
+++ b/code/data_preparation/00.25_wells_wizard_actualKRIGING.md
@@ -11,7 +11,7 @@ output:
 
 Goal: Krige water levels from the KS Wizard Well database
 
-Update 5/27/2018: re-run with re-processed well dataset.
+Update 5/27/2018: re-run with re-processed wizard well dataset.
 
 
 
@@ -23,6 +23,9 @@ library(rgdal)
 library(gstat)
 library(latticeExtra)
 library(raster)
+
+# get filepath to repo on local system
+mainDir <- '/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1'
 ```
 
 # Load Data
@@ -35,13 +38,13 @@ library(raster)
 classProj <- '+proj=aea +lat_1=20 +lat_2=60 +lat_0=40 +lon_0=-101 +x_0=0 +y_0=0 +datum=NAD83 +units=m +no_defs +ellps=GRS80 +towgs84=0,0,0'
 
 # buffer boundary
-gisDir <- 'C:/Users/deinesji/Dropbox/1PhdJill/hpa/LEMA_Part1/data/GIS/boundaries'
+gisDir <- paste0(mainDir, '/data/GIS/boundaries')
 AOIs.ll <- readOGR(gisDir,'Combined_Null9_S6_10kmBuff_indvlPolys')
 ```
 
 ```
 ## OGR data source with driver: ESRI Shapefile 
-## Source: "C:/Users/deinesji/Dropbox/1PhdJill/hpa/LEMA_Part1/data/GIS/boundaries", layer: "Combined_Null9_S6_10kmBuff_indvlPolys"
+## Source: "/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1/data/GIS/boundaries", layer: "Combined_Null9_S6_10kmBuff_indvlPolys"
 ## with 3 features
 ## It has 1 fields
 ```
@@ -50,13 +53,13 @@ AOIs.ll <- readOGR(gisDir,'Combined_Null9_S6_10kmBuff_indvlPolys')
 AOIs <- spTransform(AOIs.ll, CRS(classProj))
 
 # filtered wizard wells
-wellDir <- 'C:/Users/deinesji/Dropbox/1PhdJill/hpa/LEMA_Part1/data/wellData/WIZARD/cleaned'
+wellDir <- paste0(mainDir, '/data/wellData/WIZARD/cleaned')
 wells.ll <- readOGR(wellDir, 'wells_cleaned_clipped_1996-2017_jimRemoved')
 ```
 
 ```
 ## OGR data source with driver: ESRI Shapefile 
-## Source: "C:/Users/deinesji/Dropbox/1PhdJill/hpa/LEMA_Part1/data/wellData/WIZARD/cleaned", layer: "wells_cleaned_clipped_1996-2017_jimRemoved"
+## Source: "/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1/data/wellData/WIZARD/cleaned", layer: "wells_cleaned_clipped_1996-2017_jimRemoved"
 ## with 1095 features
 ## It has 12 fields
 ```
@@ -73,7 +76,7 @@ plot(AOIs)
 plot(wells, add=TRUE)
 ```
 
-![](../figure/03.15_actualKriging/loadData-1.png)<!-- -->
+![](../../figure/00.25_actualKriging/loadData-1.png)<!-- -->
 
 
 # Functions
@@ -103,16 +106,14 @@ build.SpinPolyGrid <- function(poly, gridres=1000, coordNames = c('x', 'y')) {
 ```
 
 # Krige!
-Methods optimized in 03.10_wells_wizardKriging.Rmd or whatever it was called
-
-Do this in a loop for all years available (2000-2017)
+Do this in a loop for all years available (1996-2017)
 
 ## variables
 
 
 ```r
 # file location and names
-outDirGis <- 'C:/Users/deinesji/Dropbox/1PhdJill/hpa/LEMA_Part1/data/GIS/waterLevels'
+outDirGis <- paste0(mainDir, '/data/GIS/waterLevels')
 fSuffixElev <- '_waterTableElev_wizardKrige_m_jimRemoved.tif'
 fSuffixChange <- '_waterTableChange_wizardKrige_m_jimRemoved'
 
@@ -175,136 +176,136 @@ for (year in years){
 }
 ```
 
-![](../figure/03.15_actualKriging/uk-1.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-1.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-2.png)<!-- -->![](../figure/03.15_actualKriging/uk-3.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-2.png)<!-- -->![](../../figure/00.25_actualKriging/uk-3.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-4.png)<!-- -->![](../figure/03.15_actualKriging/uk-5.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-4.png)<!-- -->![](../../figure/00.25_actualKriging/uk-5.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-6.png)<!-- -->![](../figure/03.15_actualKriging/uk-7.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-6.png)<!-- -->![](../../figure/00.25_actualKriging/uk-7.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-8.png)<!-- -->![](../figure/03.15_actualKriging/uk-9.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-8.png)<!-- -->![](../../figure/00.25_actualKriging/uk-9.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-10.png)<!-- -->![](../figure/03.15_actualKriging/uk-11.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-10.png)<!-- -->![](../../figure/00.25_actualKriging/uk-11.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-12.png)<!-- -->![](../figure/03.15_actualKriging/uk-13.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-12.png)<!-- -->![](../../figure/00.25_actualKriging/uk-13.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-14.png)<!-- -->![](../figure/03.15_actualKriging/uk-15.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-14.png)<!-- -->![](../../figure/00.25_actualKriging/uk-15.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-16.png)<!-- -->![](../figure/03.15_actualKriging/uk-17.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-16.png)<!-- -->![](../../figure/00.25_actualKriging/uk-17.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-18.png)<!-- -->![](../figure/03.15_actualKriging/uk-19.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-18.png)<!-- -->![](../../figure/00.25_actualKriging/uk-19.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-20.png)<!-- -->![](../figure/03.15_actualKriging/uk-21.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-20.png)<!-- -->![](../../figure/00.25_actualKriging/uk-21.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-22.png)<!-- -->![](../figure/03.15_actualKriging/uk-23.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-22.png)<!-- -->![](../../figure/00.25_actualKriging/uk-23.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-24.png)<!-- -->![](../figure/03.15_actualKriging/uk-25.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-24.png)<!-- -->![](../../figure/00.25_actualKriging/uk-25.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-26.png)<!-- -->![](../figure/03.15_actualKriging/uk-27.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-26.png)<!-- -->![](../../figure/00.25_actualKriging/uk-27.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-28.png)<!-- -->![](../figure/03.15_actualKriging/uk-29.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-28.png)<!-- -->![](../../figure/00.25_actualKriging/uk-29.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-30.png)<!-- -->![](../figure/03.15_actualKriging/uk-31.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-30.png)<!-- -->![](../../figure/00.25_actualKriging/uk-31.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-32.png)<!-- -->![](../figure/03.15_actualKriging/uk-33.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-32.png)<!-- -->![](../../figure/00.25_actualKriging/uk-33.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-34.png)<!-- -->![](../figure/03.15_actualKriging/uk-35.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-34.png)<!-- -->![](../../figure/00.25_actualKriging/uk-35.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-36.png)<!-- -->![](../figure/03.15_actualKriging/uk-37.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-36.png)<!-- -->![](../../figure/00.25_actualKriging/uk-37.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-38.png)<!-- -->![](../figure/03.15_actualKriging/uk-39.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-38.png)<!-- -->![](../../figure/00.25_actualKriging/uk-39.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-40.png)<!-- -->![](../figure/03.15_actualKriging/uk-41.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-40.png)<!-- -->![](../../figure/00.25_actualKriging/uk-41.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-42.png)<!-- -->![](../figure/03.15_actualKriging/uk-43.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-42.png)<!-- -->![](../../figure/00.25_actualKriging/uk-43.png)<!-- -->
 
 ```
 ## [using universal kriging]
 ```
 
-![](../figure/03.15_actualKriging/uk-44.png)<!-- -->
+![](../../figure/00.25_actualKriging/uk-44.png)<!-- -->
