removed unnecessary package

--- a/code/05.20_Figures_causal_pumpWTelev.md
+++ b/code/05.20_Figures_causal_pumpWTelev.md
@@ -19,7 +19,6 @@ Goal: Make plots for figure of pumping and water trends following LEMA: Figure 2
 ```r
 library(tidyverse)
 library(lemon)
-library(salustools)
 
 # filepath to repo on local system
 mainDir <- '/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1'
@@ -43,9 +42,9 @@ sessionInfo()
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] salustools_0.1.0 lemon_0.4.1      forcats_0.3.0    stringr_1.3.1   
-##  [5] dplyr_0.7.6      purrr_0.2.5      readr_1.1.1      tidyr_0.8.1     
-##  [9] tibble_1.4.2     ggplot2_3.1.0    tidyverse_1.2.1 
+##  [1] lemon_0.4.1     forcats_0.3.0   stringr_1.3.1   dplyr_0.7.6    
+##  [5] purrr_0.2.5     readr_1.1.1     tidyr_0.8.1     tibble_1.4.2   
+##  [9] ggplot2_3.1.0   tidyverse_1.2.1
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] Rcpp_0.12.19     cellranger_1.1.0 pillar_1.3.0     compiler_3.5.1  
