--- a/code/05.20_Figure2_causal_pumpWTelev.Rmd
+++ b/code/05.20_Figure2_causal_pumpWTelev.Rmd
@@ -12,7 +12,7 @@ output:
 Goal: Make plots for figure of pumping and water trends following LEMA: Figure 2. Figure composition finalized in Adobe Illustrator.
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(fig.path='../figure/05.20_fig2_causal_2017/',
+knitr::opts_chunk$set(fig.path='../figure/05.20_Fig2_causal_2017/',
                       cache = FALSE)
 ```
 
